# tav_langchain

./: .gitignore  README.md  tav_langchain.code-workspace
docs/: GutenBerg - Nietzsche - Beyond Good and Evil.txt
js/: beginning-langchain.js  create_embeddings.js  first-steps.js  langchain-lcel.js  package-lock.json  package.json  rag.js  similarity_search.js
python/: beginning-langchain.py  embeddings.py  first-steps.py  langchain-lcel.py  pyproject.toml
